# RAM-Reclaimer

./: CMakeLists.txt  LICENSE  README.md
src/: ramc_strings.h
src/app/: console_win.cpp  console_win.h  main.cpp
src/core/win/: memory_status.cpp  memory_status.h  process_enum.cpp  process_enum.h  working_set_trim.cpp  working_set_trim.h
src/gui/: admin.cpp  admin.h  localization.cpp  localization.h  main_win32.cpp  settings.cpp  settings.h
src/services/: cleaner.cpp  cleaner.h
